# customer_deduplication

./: .gitignore  .pre-commit-config.yaml  README.md  anomalies_data.py  app.py  general_data.py  generate_database.py  pyproject.toml
.github/workflows/: checks.yml
src/data_generation/: README.md  anomalies_data.py  generate_database.py  generate_df.py
src/search_src/: README.md  create_superduperdb.py  similarity_result.py
