[tool.poetry]
name = "customer-deduplication"
version = "0.1.0"
description = ""
authors = ["anitaokoh <sleekymeeratura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
faker = "^20.0.3"
ruff = "^0.1.5"
pre-commit = "^3.5.0"
sentence-transformers = "^2.2.2"
jupyter = "^1.0.0"
openai = "^1.3.5"
recordlinkage = "^0.16"
pymongo = {extras = ["srv"], version = "^4.6.0"}
python-dotenv = "^1.0.0"
streamlit = "^1.28.2"


[tool.poetry.group.dev.dependencies]
superduperdb = "^0.0.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
